--- a/src/app/terms/page.module.scss
+++ b/src/app/terms/page.module.scss
@@ -11,28 +11,16 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-sm);
-  margin-bottom: var(--spacing-2xl);
+}
 
-  &:last-child {
-    margin-bottom: 0;
-  }
-
-  h3 {
-    text-transform: capitalize;
-  }
+.sectionWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-2xl);
 }
 
 .content {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-xs);
-
-  p {
-    margin-bottom: var(--spacing-md);
-    color: var(--gray-foreground);
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
 }
