Create about data and map it on about page and add actions

--- a/src/app/about/page.module.scss
+++ b/src/app/about/page.module.scss
@@ -2,44 +2,30 @@
   padding-top: var(--navbar-height);
 }
 
-.headline {
-  text-align: center;
-}
-
-.content {
-  margin-top: var(--spacing-lg);
-}
-
+.headline,
 .tagline {
-  margin-bottom: var(--spacing-xl);
   text-align: center;
 }
 
 .section {
-  margin-bottom: var(--spacing-2xl);
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-
-  h3 {
-    text-transform: capitalize;
-  }
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-sm);
 }
 
-.descriptions {
-  margin-top: var(--spacing-md);
-
-  p {
-    margin-bottom: var(--spacing-md);
-    color: var(--gray-foreground);
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
+.sectionWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-2xl);
 }
 
-.link {
-  color: var(--primary);
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-xs);
+}
+
+.actions {
+  display: flex;
+  gap: var(--spacing-md);
 }
