Update Container gap in withContentSpacing class

--- a/src/components/ui/Container/Container.module.scss
+++ b/src/components/ui/Container/Container.module.scss
@@ -21,7 +21,7 @@
 .withContentSpacing {
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-xl);
+  gap: calc(2 * var(--spacing-2xl));
 }
 
 .lg,
