--- a/src/components/Story/Story.module.scss
+++ b/src/components/Story/Story.module.scss
@@ -23,8 +23,17 @@
   gap: var(--spacing-sm);
 }
 
-.coverImage {
+.coverImageWrapper {
   flex-shrink: 0;
+  width: 175px;
+  height: 200px;
+  border: 1px solid var(--border);
+}
+
+.coverImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .actions {
