--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,15 +1,15 @@
 @use "@/styles/theme" as theme;
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Spectral+SC:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 :root {
   @include theme.light();
 
   --overlay: rgba(0, 0, 0, 0.5);
 
-  --reading-font: "Source Sans 3", sans-serif;
-  --ui-font: "Inter", sans-serif;
+  --ui-font: "MedievalSharp", cursive;
+  --reading-font: "Spectral SC", serif;
 
   --z-index-navbar: 50;
 
@@ -50,22 +50,6 @@ html[data-theme="system"] {
   @media (prefers-color-scheme: dark) {
     @include theme.dark();
   }
-}
-
-html[data-ui-font="inter"] {
-  --ui-font: "Inter", sans-serif;
-}
-
-html[data-ui-font="source-sans3"] {
-  --ui-font: "Source Sans 3", sans-serif;
-}
-
-html[data-reading-font="inter"] {
-  --reading-font: "Inter", sans-serif;
-}
-
-html[data-reading-font="source-sans3"] {
-  --reading-font: "Source Sans 3", sans-serif;
 }
 
 * {
