--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,5 +1,16 @@
 @use "@/styles/mixins" as mixins;
 
+.main {
+  animation: fadeInAnim 0.3s ease-out forwards;
+  opacity: 0;
+}
+
+@keyframes fadeInAnim {
+  to {
+    opacity: 1;
+  }
+}
+
 .hero {
   height: 80dvh;
   display: flex;
