Update app theme to match dark fantasy vibe and more

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,10 +1,28 @@
-@use "@/styles/theme" as theme;
-
 @import url("https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Spectral+SC:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 :root {
-  @include theme.light();
+  --background: #0d1015;
+  --foreground: #e0e0e3;
+
+  --foreground-muted: #6c6f7a;
+  --heading-foreground: #f0e6f6;
+
+  --primary: #5d323d;
+  --primary-foreground: #fbeaec;
+
+  --secondary: #2f2a35;
+  --secondary-foreground: #e2d3f5;
+
+  --card: #13161c;
+  --card-foreground: #e6e6eb;
+
+  --destructive: #7c1a1a;
+  --destructive-foreground: #fce5e5;
+
+  --star: #ffc857;
+
+  --border: #24262e;
 
   --overlay: rgba(0, 0, 0, 0.5);
 
@@ -36,20 +54,6 @@
   --font-size-lg: 1.125rem; /* 18px */
   --font-size-xl: 1.25rem; /* 20px */
   --font-size-2xl: 1.5rem; /* 24px */
-}
-
-html[data-theme="dark"] {
-  @include theme.dark();
-}
-
-html[data-theme="system"] {
-  @media (prefers-color-scheme: light) {
-    @include theme.light();
-  }
-
-  @media (prefers-color-scheme: dark) {
-    @include theme.dark();
-  }
 }
 
 * {
