--- a/src/components/StarRating/StarRating.module.scss
+++ b/src/components/StarRating/StarRating.module.scss
@@ -16,8 +16,8 @@
 }
 
 .unstarred {
-  color: var(--gray-foreground);
-  fill: var(--gray-foreground);
+  color: var(--foreground-muted);
+  fill: var(--foreground-muted);
 }
 
 .starRatingFixedWidth {
