--- a/src/components/ui/Input/Input.module.scss
+++ b/src/components/ui/Input/Input.module.scss
@@ -43,7 +43,7 @@
   top: calc(1.25 * var(--spacing-sm));
   left: 0;
   font-size: var(--font-size-sm);
-  color: var(--gray-foreground);
+  color: var(--foreground-muted);
   pointer-events: none;
   text-transform: uppercase;
   transition: all 0.3s ease;
