--- a/src/components/ui/Tabs/Tabs.module.scss
+++ b/src/components/ui/Tabs/Tabs.module.scss
@@ -9,7 +9,7 @@
   border: none;
   cursor: pointer;
   font-weight: 500;
-  color: var(--gray-foreground);
+  color: var(--foreground-muted);
   transition: all 0.2s ease;
   border-bottom: 1px solid var(--border);
   width: 100%;
