--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,16 +1,5 @@
 @use "@/styles/mixins" as mixins;
 
-.main {
-  animation: fadeInAnim 0.3s ease-out forwards;
-  opacity: 0;
-}
-
-@keyframes fadeInAnim {
-  to {
-    opacity: 1;
-  }
-}
-
 .hero {
   height: 80dvh;
   display: flex;
@@ -37,8 +26,8 @@
   width: 100%;
 }
 
-.quoteOfTheDayWrapper {
-  margin-top: calc(2 * var(--spacing-2xl));
+.section {
+  padding-top: calc(2 * var(--spacing-2xl));
 }
 
 @include mixins.media(sm) {
