--- a/src/components/Stats/Stats.module.scss
+++ b/src/components/Stats/Stats.module.scss
@@ -15,5 +15,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--gray-foreground);
+  color: var(--foreground-muted);
 }
